--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                  <input type="text">
         </div>
         <div class="holder">
-            <button class="gbutton">Google-Suche</button>
+            <button class="gbutton">Google-Finden</button>
             <button class="gbutton">Auf gut Glück</button>
             </div>
             <nav><!-- <div id="nav"> -->
